[tool.poetry]
name = "banking"
version = "0.1.0"
description = ""
authors = ["Alessandro Lorenzi <me@alorenzi.eu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
freezegun = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
